[package]
name = "socky"
version = "0.1.1"
edition = "2021"
description = "Websocket proxy support"
reposity = "https://github.com/abusers-inc/socky"
license = "MIT"

[dependencies]
async-http-proxy = { version = "1.2.5", features = ["runtime-tokio", "basic-auth"] }
async-tungstenite = { version = "0.23", features = ["tokio", "tokio-rustls-webpki-roots"] }
fast-socks5 = "0.9.6"
futures-util = "0.3.30"
proxied = "0.1.0"
rustls = "0.21"
rustls-pki-types = "1.7.0"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["sync", "rt", "macros"] }
tokio-rustls = "0.24.1"
url = "2.5.1"
webpki-roots = "0.25.4"


