[package]
name = "socky"
version = "0.2.2"
edition = "2021"
description = "Websocket proxy support"
reposity = "https://github.com/abusers-inc/socky"
license = "MIT"

[dependencies]
async-tungstenite = { version = "0.23", features = ["tokio", "tokio-rustls-webpki-roots"] }
futures-util = "0.3.30"
proxied = "0.3.5"
rustls = "0.21.12"
rustls-native-certs = "0.7.1"
rustls-pki-types = "1.7.0"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["sync", "rt", "macros"] }
tokio-rustls = "0.24.1"
tracing = "0.1.40"
url = "2.5.1"
webpki-roots = "0.26.3"


